@@ -12,6 +12,8 @@ version 2.3.0:
 	  remove the plugin from the list of saved plugins so it won't load
 	  at the next startup.  Previously, we were ignoring this case, which
 	  could lead to crashes.
+	* Mark dialog windows as transient for appropriate parent windows to
+	  help window managers do the right thing  (Gabriel Schulhof)
 
 	Finch:
 	* If a plugin says it can't be unloaded, we now display an error and
